# final_project

./: Cargo.toml
data/: graph_desc.toml
data/shaders/: edge_fs.glsl  edge_vs.glsl  fullscreen_fs.glsl  fullscreen_vs.glsl  node_fs.glsl  node_vs.glsl
projects/: aaaa.toml  another_one.toml  fractal.toml  line_20.toml  net_100.toml  net_20.toml  net_50.toml  ring_15.toml  ring_20.toml  star_20.toml  test_project.toml  tttast.toml
src/: input.rs  main.rs  ui.rs  utils.rs
src/app/: base.rs  context.rs  mod.rs
src/compute/: mod.rs  state.rs
src/compute/steps/: betweeness.rs  capacity.rs  delete.rs  mod.rs  zmax.rs
src/graph/: mat.rs  mod.rs  node.rs  path_finder.rs
src/renderer/: binding.rs  draw.rs  framebuffer.rs  mesh.rs  mod.rs  shader.rs
src/ui/: editor.rs  mod.rs  outliner.rs  summary.rs  viewport.rs
src/ui/tabs/: editor.rs  mod.rs  outliner.rs  viewport.rs
src/world/: camera.rs  desc.rs  mod.rs  node.rs
src/world/editor/: ext_adj.rs  mod.rs  topology.rs
src/world/summary/: mod.rs
