[package]
name = "final-project"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
simple_logger = "5.0.0"

toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] }

egui = { version = "0.31.1", default-features = false, features = [
  "bytemuck",
  "default_fonts",
] }
transform-gizmo-egui = { version = "0.6.0" }
egui_extras = "0.31.1"
egui-gizmo = { version = "0.16.2" }
egui-winit = { version = "0.31.1", default-features = false }
egui_plot = "0.32.1"
egui_glow = { version = "0.31.1", default-features = false, features = [
  "winit",
  "wayland",
] }

winit = { version = "0.30.9", default-features = false, features = ["rwh_06"] }
raw-window-handle = "0.6.2"

glow = "0.16.0"
glutin = "0.32.2"
glutin-winit = "0.5.0"

cgmath = { version = "0.18.0", features = ["mint"] }
tobj = "4.0.3"
bytemuck = { version = "1.22.0", features = ["derive"] }
